--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,14 @@
 [workspace]
-members = ["client", "net", "server"]
+members = ["client", "server", "util"]
 
 [workspace.dependencies]
-bevy = "0.11"
-bevy-inspector-egui = "0.19"
-net = { path = "./net" }
+bevy = "0.11.3"
+bevy-inspector-egui = "0.20.0"
 serde = "1.0.188"
 bincode = "1.3.3"
+syn = "2.0.38"
+quote = "1.0.33"
+util = { path = "./util" }
 
 [profile.dev]
 opt-level = 1
