--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 members = ["client", "proc-macros", "server", "util"]
 
 [workspace.dependencies]
-bevy = { version = "0.11.3", features = ["dynamic_linking"] }
+bevy = "0.11.3"
 bevy-inspector-egui = "0.20.0"
 bincode = "1.3.3"
 proc-macros = { path = "./proc-macros" }
