--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 [dependencies]
 bevy = { workspace = true }
 bevy-inspector-egui = { workspace = true }
+serde = { workspace = true }
 util = {workspace = true }
