--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,16 @@
 [workspace]
-members = ["client", "proc-macros", "server", "util"]
+members = ["client", "net", "server", "util"]
 
 [workspace.dependencies]
 bevy = "0.11.3"
 bevy-inspector-egui = "0.20.0"
 bincode = "1.3.3"
-proc-macros = { path = "./proc-macros" }
+net = { path = "./net" }
 quote = "1.0.33"
-serde = "1.0.189"
+serde = { version = "1.0.190", features = ["derive"] }
 syn = "2.0.38"
 util = { path = "./util" }
+websocket = "0.27.0"
 
 [profile.dev]
 opt-level = 1
