--- a/util/Cargo.toml
+++ b/util/Cargo.toml
@@ -4,7 +4,4 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bevy = { workspace = true }
-bincode = { workspace = true }
-proc-macros = { workspace = true }
-serde = { workspace = true }
+net = { workspace = true }
