--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,4 +6,7 @@ edition = "2021"
 [dependencies]
 bevy = { workspace = true }
 bevy-inspector-egui = { workspace = true }
+bincode = { workspace = true }
+serde = { workspace = true }
 util = { workspace = true }
+websocket = { workspace = true }
