--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 [dependencies]
 bevy = { workspace = true }
 bevy-inspector-egui = { workspace = true }
+bincode = { workspace = true }
 serde = { workspace = true }
 util = {workspace = true }
