--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["client", "net", "server", "util"]
+members = ["client", "net", "server", "util", "world"]
 
 [workspace.dependencies]
 bevy = "0.12"
@@ -8,8 +8,8 @@ bincode = "1.3.3"
 net = { path = "./net" }
 quote = "1.0.33"
 serde = { version = "1.0.192", features = ["derive"] }
-syn = "2.0.39"
 util = { path = "./util" }
+world = { path = "./world" }
 
 [profile.dev]
 opt-level = 1
