--- a/world/Cargo.toml
+++ b/world/Cargo.toml
@@ -4,3 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+
+[[example]]
+name = "meshing"
+
+[dev-dependencies]
+bevy = { workspace = true }
+bevy-inspector-egui = { workspace = true }
