--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,15 @@
 [workspace]
-members = ["client", "net", "server", "ui", "util", "world"]
+members = ["client", "item", "net", "server", "ui", "world"]
 
 [workspace.dependencies]
 bevy = "0.12.0"
 bevy-inspector-egui = "0.21.0"
 bincode = "1.3.3"
+item = { path = "./item" }
 net = { path = "./net" }
 quote = "1.0.33"
 serde = { version = "1.0.192", features = ["derive"] }
 ui = { path = "./ui" }
-util = { path = "./util" }
 world = { path = "./world" }
 
 [profile.dev]
