--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,18 +1,13 @@
 [workspace]
-members = ["./bin/client", "./lib/net", "./bin/server", "./lib/voxel_world"]
+members = ["client", "net", "server"]
 
 [workspace.dependencies]
 # external dependencies
 bevy = "0.12.0"
 bevy-inspector-egui = "0.21.0"
-bincode = "1.3.3"
-ndshape = "0.3.0"
-noise = { version = "0.8.2", features = ["images"]}
-quote = "1.0.33"
 serde = { version = "1.0.193", features = ["derive"] }
 # internal dependencies
-net = { path = "./lib/net" }
-voxel_world = { path = "./lib/voxel_world" }
+net = { path = "net" }
 
 [workspace.package]
 version = "0.1.0"
